language-bindings/rust/crates/wamr-sys/src/lib.rs

#[test]
fn bindgen_test_layout_RuntimeInitArgs() {
    const UNINIT: ::core::mem::MaybeUninit<RuntimeInitArgs> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<RuntimeInitArgs>(),
        224usize,
        concat!("Size of: ", stringify!(RuntimeInitArgs))
    );
    assert_eq!(
        ::core::mem::align_of::<RuntimeInitArgs>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeInitArgs))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).mem_alloc_type) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(mem_alloc_type)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).mem_alloc_option) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(mem_alloc_option)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).native_module_name) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(native_module_name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).native_symbols) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(native_symbols)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).n_native_symbols) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(n_native_symbols)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max_thread_num) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(max_thread_num)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ip_addr) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(ip_addr)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).unused) as usize - ptr as usize },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(unused)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).instance_port) as usize - ptr as usize },
        196usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(instance_port)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fast_jit_code_cache_size) as usize - ptr as usize },
        200usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(fast_jit_code_cache_size)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).running_mode) as usize - ptr as usize },
        204usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(running_mode)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).llvm_jit_opt_level) as usize - ptr as usize },
        208usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(llvm_jit_opt_level)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).llvm_jit_size_level) as usize - ptr as usize },
        212usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(llvm_jit_size_level)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).segue_flags) as usize - ptr as usize },
        216usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(segue_flags)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).enable_linux_perf) as usize - ptr as usize },
        220usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeInitArgs),
            "::",
            stringify!(enable_linux_perf)
        )
    );
}
impl Default for RuntimeInitArgs {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type wasm_valkind_t = u8;
pub const wasm_valkind_enum_WASM_I32: wasm_valkind_enum = 0;
pub const wasm_valkind_enum_WASM_I64: wasm_valkind_enum = 1;
pub const wasm_valkind_enum_WASM_F32: wasm_valkind_enum = 2;
pub const wasm_valkind_enum_WASM_F64: wasm_valkind_enum = 3;
pub const wasm_valkind_enum_WASM_ANYREF: wasm_valkind_enum = 128;
pub const wasm_valkind_enum_WASM_FUNCREF: wasm_valkind_enum = 129;
pub type wasm_valkind_enum = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct wasm_ref_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wasm_val_t {
    pub kind: wasm_valkind_t,
    pub __paddings: [u8; 7usize],
    pub of: wasm_val_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union wasm_val_t__bindgen_ty_1 {
    pub i32_: i32,
    pub i64_: i64,
    pub f32_: f32,
    pub f64_: f64,
    pub foreign: usize,
    pub ref_: *mut wasm_ref_t,
}
#[test]
fn bindgen_test_layout_wasm_val_t__bindgen_ty_1() {
    const UNINIT: ::core::mem::MaybeUninit<wasm_val_t__bindgen_ty_1> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<wasm_val_t__bindgen_ty_1>(),
        8usize,
        concat!("Size of: ", stringify!(wasm_val_t__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<wasm_val_t__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(wasm_val_t__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).i32_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t__bindgen_ty_1),
            "::",
            stringify!(i32_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).i64_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t__bindgen_ty_1),
            "::",
            stringify!(i64_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).f32_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t__bindgen_ty_1),
            "::",
            stringify!(f32_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).f64_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t__bindgen_ty_1),
            "::",
            stringify!(f64_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).foreign) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t__bindgen_ty_1),
            "::",
            stringify!(foreign)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ref_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t__bindgen_ty_1),
            "::",
            stringify!(ref_)
        )
    );
}
impl Default for wasm_val_t__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[test]
fn bindgen_test_layout_wasm_val_t() {
    const UNINIT: ::core::mem::MaybeUninit<wasm_val_t> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<wasm_val_t>(),
        16usize,
        concat!("Size of: ", stringify!(wasm_val_t))
    );
    assert_eq!(
        ::core::mem::align_of::<wasm_val_t>(),
        8usize,
        concat!("Alignment of ", stringify!(wasm_val_t))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).kind) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t),
            "::",
            stringify!(kind)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).__paddings) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t),
            "::",
            stringify!(__paddings)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).of) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(wasm_val_t),
            "::",
            stringify!(of)
        )
    );
}
impl Default for wasm_val_t {
    fn default() -> Self {
        let mut s = ::core::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::core::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub const log_level_t_WASM_LOG_LEVEL_FATAL: log_level_t = 0;
pub const log_level_t_WASM_LOG_LEVEL_ERROR: log_level_t = 1;
pub const log_level_t_WASM_LOG_LEVEL_WARNING: log_level_t = 2;
pub const log_level_t_WASM_LOG_LEVEL_DEBUG: log_level_t = 3;
pub const log_level_t_WASM_LOG_LEVEL_VERBOSE: log_level_t = 4;
pub type log_level_t = ::core::ffi::c_uint;
extern "C" {
    #[doc = " Initialize the WASM runtime environment, and also initialize\n the memory allocator with system allocator, which calls os_malloc\n to allocate memory\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_init() -> bool;
}
extern "C" {
    #[doc = " Initialize the WASM runtime environment, WASM running mode,\n and also initialize the memory allocator and register native symbols,\n which are specified with init arguments\n\n @param init_args specifies the init arguments\n\n @return return true if success, false otherwise"]
    pub fn wasm_runtime_full_init(init_args: *mut RuntimeInitArgs) -> bool;
}
extern "C" {
    #[doc = " Set the log level. To be called after the runtime is initialized.\n\n @param level the log level to set"]
    pub fn wasm_runtime_set_log_level(level: log_level_t);
}
extern "C" {
    #[doc = " Query whether a certain running mode is supported for the runtime\n\n @param running_mode the running mode to query\n\n @return true if this running mode is supported, false otherwise"]
    pub fn wasm_runtime_is_running_mode_supported(running_mode: RunningMode) -> bool;
}
extern "C" {
    #[doc = " Set the default running mode for the runtime. It is inherited\n to set the running mode of a module instance when it is instantiated,\n and can be changed by calling wasm_runtime_set_running_mode\n\n @param running_mode the running mode to set\n\n @return true if success, false otherwise"]
    pub fn wasm_runtime_set_default_running_mode(running_mode: RunningMode) -> bool;
}
extern "C" {
    #[doc = " Destroy the WASM runtime environment."]
    pub fn wasm_runtime_destroy();
}
